<resources>
    <string name="app_name">Makhārij al-Hurūf</string>
    <string name="bcsf18m010">BCSF18M010</string>
    <string name="muhammad_junaid">MUHAMMAD JUNAID</string>
    <string name="move_to_repo">Move to Repo</string>
    <string name="move_to_app">Move to App</string>
    <string name="repoimage">repoImage</string>
    <string name="learn">Learn</string>
    <string name="practice">Practice</string>
    <string name="test">Test</string>
    <string name="halqiyah">Halqiyah</string>
    <string name="lisaveyah">Lisaveyah</string>
    <string name="ghunna">Ghunna</string>
    <string name="Lahatiyah">LAHATIYAH</string>
    <string name="tarfiyah">Tarfiyah</string>
    <string name="shajariyah_haafiyah">Shajariyah-Haafiyah</string>
    <string name="nit_eeyah">Nit-eeyah</string>
    <string name="Halqiyah">HALQIYAH</string>
    <string name="arabic_letters">Arabic Letters</string>
    <string name="ain_haah">ع ح</string>
    <string name="end_of_throat">End of Throat</string>
    <string name="alif_hamza">أ ہ</string>
    <string name="sound_produced_nfrom">Sound Produced\nFrom</string>
    <string name="middle_of_throat">Middle of Throat</string>
    <string name="ghain_khaah">غ خ</string>
    <string name="start_of_throat">Start of Throat</string>
    <string name="lahatiyah">Lahatiyah</string>
    <string name="kaaf">ق</string>
    <string name="base_of_tongue_which_nis_near_uvula_touching_nthe_mouth_of_roof_n">Base of Tongue which\nis near Uvula touching\nthe mouth of roof\n</string>
    <string name="kaah">ک</string>
    <string name="portion_of_tongue_near_nits_base_touching_the_nroof_of_mouth_n">Portion of Tongue near\nits base touching the\nroof of mouth\n</string>
    <string name="haah_sheen_yaah">ج ش ی</string>
    <string name="tongue_touching_the_ncenter_of_mouth_roof_n">Tongue touching the\ncenter of mouth roof\n</string>
    <string name="zuadh">ض</string>
    <string name="one_side_of_tongue_ntouching_the_molar_nteeth_n">One side of tongue \ntouching the molar\nteeth\n</string>
    <string name="Tarfiyah">TARFIYAH</string>
    <string name="laam">ل</string>
    <string name="nuun">ن</string>
    <string name="rounded_tip_of_tongue_ntouching_the_base_of_nthr_frontal_8_teeth_n">Rounded tip of tongue\ntouching the base of \nthr frontal 8 teeth\n</string>
    <string name="rounded_tip_of_tongue_ntouching_the_base_of_nfrontal_6_teeth_n">Rounded tip of tongue\ntouching the base of\nfrontal 6 teeth\n</string>
    <string name="ray">ر</string>
    <string name="rounded_tip_of_tongue_nand_some_portion_near_nit_touching_the_base_of_nthr_frontal_4_teeth_n">Rounded tip of tongue\nand some portion near\nit touching the base of\nthr frontal 4 teeth\n</string>
    <string name="Nit_eeyah">NIT-EEYAH</string>
    <string name="teeh_ray_tawe">ت د ط</string>
    <string name="tip_of_the_tongue_ntouching_the_base_of_nthe_front_2_teeth_n">Tip of the tongue \ntouching the base of \nthe front 2 teeth\n</string>
    <string name="Lisaveyah">LISAVEYAH</string>
    <string name="zay">ظ ذ ث</string>
    <string name="tip_of_the_tonguentouching_the_ntip_of_the_front_2_teeth_n">Tip of the tonguentouching the\ntip of the front 2 teeth\n</string>
    <string name="taah">ظ ذ ث</string>
    <string name="tip_of_the_tongue_ntouching_the_tip_of_the_nfront_2_teeth_n">Tip of the tongue\ntouching the tip of the\nfront 2 teeth\n</string>
    <string name="Ghunna">GHUNNA</string>
    <string name="meem">م ن</string>
    <string name="while_pronouncing_the_nending_sound_of_nor_bring_the_vibration_nto_the_nose_n">While pronouncing the\nending sound of م \nor ن ,bring the vibration\nto the nose\n</string>
    <string name="faa">ف</string>
    <string name="tip_of_the_two_upper_njaw_teeth_touches_the_ninner_part_of_lower_lip_n">Tip of the two upper\njaw teeth touches the\ninner part of lower lip\n</string>
    <string name="bee">ب</string>
    <string name="inner_part_of_the_both_nlips_touch_each_other_n">Inner part of the both\nlips touch each other\n</string>
    <string name="meam">م</string>
    <string name="outer_part_of_both_lips_ntouch_each_other_n">Outer part of both lips\ntouch each other\n</string>
    <string name="wao">و</string>
    <string name="rounding_both_lips_and_nand_not_closing_the_nmouth_n">Rounding both lips and\nand not closing the\nmouth\n</string>
    <string name="bee_bu_bee">باَ بوُ بىِ</string>
    <string name="mouth_empty_space_while_nspeaking_words_like_n_n">Mouth empty space while\nspeaking words like باَ \nor بوُ or بىِ\n</string>
</resources>