<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

  <Button
      android:id="@+id/learn"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="84dp"
      android:text="@string/learn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/practice"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="80dp"
      android:text="@string/practice"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/learn" />

  <Button
      android:id="@+id/test"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="80dp"
      android:text="@string/test"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/practice" />

  <androidx.constraintlayout.widget.Group
      android:id="@+id/group"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>